Fix ago and spacing

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -250,7 +250,7 @@ input[type='range']::-webkit-slider-thumb {
 
 .fader {
 	background: #222;
-	padding: 1.5em 5px;
+	padding: 1.5em 1em;
 	display: flex;
 	align-items: center;
 
